--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-fundo: #00030C;
+    --fonte-principal: 'Inter Tight';
 }
 
 body{
     background-color: var(--cor-fundo);
     color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 * {
@@ -15,15 +19,22 @@ body{
     padding: 0;
 }
 
+.container__titulo{
+font-size: 1.625rem;
+}
+
 .principal {
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
-    
+    align-items: center;
+    text-align: center;
 }
 
 .container {
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 .container__botao {
@@ -33,4 +44,53 @@ body{
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
+    margin: 1em ;
+}
+
+.botao__secundario {
+    background-color: transparent;
+    border: 2px solid var(--branco-principal);
+}
+
+.container__aviso{
+    font-size: 0.75rem;
+    color: #C0C0C0;
+}
+
+.container__imagem {
+    margin: 1em 0 1em 0;
+}
+
+.container__caixa{
+    margin: 0 6em;
+
+}
+
+.secundario__imagem{
+    width: 80%;
+}
+
+.secundario{
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto{
+    color: var(--cinza-secundario);
+}
+
+.secundario__botao{
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao{
+    padding: 2em;
 }
